# fast_compression

./: main.py  pyproject.toml  tree.txt
app/: main_window.py
app/components/page_homepage/: page_homepage.py
app/components/page_homepage/components/: upload_panel.py  zip_task_panel.py
