[project]
name = "fast-compression"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.4",
    "pyqt-siliconui>=0.0.1",
    "pyqt5==5.15.10",
    "pyqt5-qt5==5.15.2",
    "setuptools>=78.1.0",
]

[dependency-groups]
dev = []

[tool.uv.sources]
pyqt-siliconui = { git = "https://github.com/ChinaIceF/PyQt-SiliconUI.git" }
